--- a/recipes/erbazzone.html
+++ b/recipes/erbazzone.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Erbazzone Recipe</title>
 </head>
 <body>
-    <h1>Erbazzone Recipe: A Traditional Savory Pie from Emilia-Romagna</h1>
+    <h1 class="title">Erbazzone Recipe: A Traditional Savory Pie from Emilia-Romagna</h1>
 
-    <a href="../index.html">Home Page</a>
+    <a href="../index.html" id="home-page">Home Page</a>
 
-    <h2>Introduction</h2>
-    <p>Erbazzone is a delicious savory pie from Reggio Emilia, in the Emilia-Romagna region of Italy. This rustic dish is made with a thin, crispy pastry filled with a rich mixture of Swiss chard (or spinach), Parmesan, and pancetta. Traditionally prepared by farmers to use fresh greens from the garden, erbazzone is a flavorful and satisfying dish, perfect as an appetizer, snack, or light meal.</p>
+    <h2 id="introduction-title">Introduction</h2>
+    <p class="introduction">Erbazzone is a delicious savory pie from Reggio Emilia, in the Emilia-Romagna region of Italy. This rustic dish is made with a thin, crispy pastry filled with a rich mixture of Swiss chard (or spinach), Parmesan, and pancetta. Traditionally prepared by farmers to use fresh greens from the garden, erbazzone is a flavorful and satisfying dish, perfect as an appetizer, snack, or light meal.</p>
 
     <img src="../img/erbazzone.jpeg" alt="Erbazzone" height="310" width="310">
 
