--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna Recipe</title>
 </head>
 <body>
-    <h1>Lasagna Recipe: A Classic Italian Favorite</h1>
+    <h1 class="title">Lasagna Recipe: A Classic Italian Favorite</h1>
 
-    <a href="../index.html">Home Page</a>
+    <a href="../index.html" id="home-page">Home Page</a>
 
-    <h2>Introduction</h2>
-    <p>Lasagna is one of the most beloved dishes in Italian cuisine. Originating from the Emilia-Romagna region, this layered pasta dish combines rich meat sauce, creamy béchamel (or ricotta in some variations), and melted cheese for a comforting and indulgent meal. Whether made for a family gathering or a special occasion, lasagna is a hearty dish that brings people together around the table.</p>
+    <h2 id="introduction-title">Introduction</h2>
+    <p class="introduction">Lasagna is one of the most beloved dishes in Italian cuisine. Originating from the Emilia-Romagna region, this layered pasta dish combines rich meat sauce, creamy béchamel (or ricotta in some variations), and melted cheese for a comforting and indulgent meal. Whether made for a family gathering or a special occasion, lasagna is a hearty dish that brings people together around the table.</p>
     
     <img src="../img/lasagna.jpeg" alt="Lasagna" height="310" width="310">
 
