--- a/recipes/piadina_romagnola.html
+++ b/recipes/piadina_romagnola.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Piadina Romagnola</title>
 </head>
 <body>
-    <h1>Piadina Romagnola: A Quick and Easy Italian Flatbread</h1>
+    <h1 class="title">Piadina Romagnola: A Quick and Easy Italian Flatbread</h1>
 
-    <a href="../index.html">Home Page</a>
+    <a href="../index.html" id="home-page">Home Page</a>
 
-    <h2>Introduction</h2>
-    <p>Piadina Romagnola is a traditional Italian flatbread from the Emilia-Romagna region, known for its soft yet slightly crispy texture. It’s incredibly quick and easy to make, requiring just a few basic ingredients. Typically filled with cheese, cured meats, and vegetables, piadina is perfect for a light lunch, snack, or even a quick dinner.</p>
+    <h2 id="introduction-title">Introduction</h2>
+    <p class="introduction">Piadina Romagnola is a traditional Italian flatbread from the Emilia-Romagna region, known for its soft yet slightly crispy texture. It’s incredibly quick and easy to make, requiring just a few basic ingredients. Typically filled with cheese, cured meats, and vegetables, piadina is perfect for a light lunch, snack, or even a quick dinner.</p>
 
     <img src="../img/piadina_romagnola.jpeg" alt="Piadina Romagnola" height="310" width="310">
 
