--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Odin Recipe</h1>
-    <ul>
+    <h1 class="title">Odin Recipe</h1>
+    <ul id="recipe">
         <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a></li>
         <li><a href="./recipes/erbazzone.html" target="_blank" rel="noopener noreferrer">Erbazzone Recipe</a></li>
         <li><a href="./recipes/piadina_romagnola.html" target="_blank" rel="noopener noreferrer">Piadina Romagnola Recipe</a></li>
